--- a/.github/workflows/pull_request_actions.yml
+++ b/.github/workflows/pull_request_actions.yml
@@ -30,7 +30,7 @@ jobs:
       ENABLE_COMMENTS: true
       WORKING_DIRECTORY: './'
   plan:
-    name: "Terragrunt Init,Validate and Plan"
+    name: "Terraform Init,Validate and Plan"
     needs: [ kics ]
     if: github.event_name == 'pull_request'
     runs-on: ubuntu-20.04
@@ -48,10 +48,11 @@ jobs:
         with:
           terraform_version: ${{ env.TERRAFORM_VERSION }}
           terraform_wrapper: true
-      - name: Setup Terragrunt
-        uses: autero1/action-terragrunt@v1.2.0
-        with:
-          terragrunt_version: ${{ env.TERRAGRUNT_VERSION }}
+
+      # - name: Setup Terragrunt
+      #   uses: autero1/action-terragrunt@v1.2.0
+      #   with:
+      #     terragrunt_version: ${{ env.TERRAGRUNT_VERSION }}
       - name: configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1-node16
         with:
@@ -60,20 +61,20 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Terragrunt Init
+      - name: Terraform Init
         id: init
-        run: terragrunt run-all init -no-color --terragrunt-non-interactive
-      - name: Terragrunt Validate
+        run: terraform init #terragrunt run-all init -no-color --terragrunt-non-interactive
+      - name: Terraform Validate
         id: validate
-        run: terragrunt run-all validate -no-color --terragrunt-non-interactive
-      - name: Terragrunt Plan
+        run:  terraform validate #terragrunt run-all validate -no-color --terragrunt-non-interactive
+      - name: Terraform Plan
         id: plan
         run: |
-         terragrunt run-all plan -no-color --terragrunt-non-interactive >/dev/null -out=tfplan #terragrunt run-all plan -no-color --terragrunt-non-interactive
-         terragrunt show tfplan
+         terraform plan 
+         terraform show tfplan
         continue-on-error: true
   apply:
-    name: "Terragrunt Apply"
+    name: "Terraform Apply"
     if: github.event_name == 'push'
     runs-on: ubuntu-20.04
     defaults:
@@ -87,20 +88,21 @@ jobs:
         with:
           terraform_version: ${{ env.TERRAFORM_VERSION }}
           terraform_wrapper: true
-      - name: Setup Terragrunt
-        uses: autero1/action-terragrunt@v1.2.0
-        with:
-          terragrunt_version: ${{ env.TERRAGRUNT_VERSION }}
+
+      # - name: Setup Terragrunt
+      #   uses: autero1/action-terragrunt@v1.2.0
+      #   with:
+      #     terragrunt_version: ${{ env.TERRAGRUNT_VERSION }}
       - name: configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1-node16
         with:
           aws-region: us-east-1
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      - name: Terragrunt Init
+      - name: Terraform Init
         id: init
-        run : terragrunt run-all init -no-color --terragrunt-non-interactive
-      - name: Terragrunt Apply
+        run : terraform init # run-all init -no-color --terragrunt-non-interactive
+      - name: Terraform Apply
         id: apply
-        run: terragrunt run-all apply -no-color --terragrunt-non-interactive
+        run: terraform apply #run-all apply -no-color --terragrunt-non-interactive
         continue-on-error: true
