--- a/.github/workflows/pull_request_actions.yml
+++ b/.github/workflows/pull_request_actions.yml
@@ -26,7 +26,7 @@ jobs:
     name: "Run Kics scan on Terraform code"
     uses: ./.github/workflows/terraform_kics.yml
     with:
-      # Enabling Comments will add a comment to a PR, but these do no exist in Push events and will throw an error.
+      # Enabling Comment will add a comment to a PR, but these do no exist in Push events and will throw an error.
       ENABLE_COMMENTS: true
       WORKING_DIRECTORY: './'
   plan:
