--- a/.github/workflows/pull_request_actions.yml
+++ b/.github/workflows/pull_request_actions.yml
@@ -63,7 +63,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Terraform Init
         id: init
-        run: terraform init #terragrunt run-all init -no-color --terragrunt-non-interactive
+        run: terraform init #terragrunt runs-all init -no-color --terragrunt-non-interactive
       - name: Terraform Validate
         id: validate
         run:  terraform validate #terragrunt run-all validate -no-color --terragrunt-non-interactive
